# Gomoku

./: .gitignore  CMakeLists.txt  base.h  debug.h  game.h  game_area.h  game_board.h  game_node.h  game_play.h  game_position.h  game_slot.h  game_tree.h  integer_math.h  main.cpp  player.h  player_marker.h  score.h
docs/: relatorio-1.md  relatorio-1.md.html  relatorio-2.md  relatorio-2.md.html
